Adds timeline styles, layout,  and jquery

--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <div class="timeline-outer" style="background-image: url('images/boat.jpg')" id="boat-image">
-    <div class="text-container">
-      <p id="boat-content">This is an example description</p>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
+      <div class="text-container">
+        <p id="boat-content">This is a really old boat.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">  
+    <div class="timeline-inner" id="stonehenge-img" style="background-image: url('images/stonehenge.jpg')">
+      <div class="text-container">
+        <p id="stonehenge-content">These are some ancient stones.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="hut-img" style="background-image: url('images/hut.jpg')">
+      <div class="text-container">
+        <p id="hut-content">A very old stone house.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="meercat-img" style="background-image: url('images/meercat.jpg')">
+      <div class="text-container">
+        <p id="meercat-content">How did he get in here?</p>
+      </div>
     </div>
   </div>
   <div class="dates">
@@ -15,25 +38,71 @@
       <p class="year">2012</p>
       <p class="month">April</p>
     </div>
-    <div class="date-box" id="">
+    <div class="date-box" id="stonehenge">
       <p class="year">2013</p>
       <p class="month">Aug.</p>
     </div>
-    <div class="date-box" id="">
+    <div class="date-box" id="hut">
       <p class="year">2013</p>
       <p class="month">Sept.</p>
     </div>
-    <div class="date-box" id="">
+    <div class="date-box" id="meercat">
+      <p class="year">2014</p>
+      <p class="month">March</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2012</p>
+      <p class="month">April</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Aug.</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Sept.</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2014</p>
+      <p class="month">March</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2012</p>
+      <p class="month">April</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Aug.</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Sept.</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2014</p>
+      <p class="month">March</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2012</p>
+      <p class="month">April</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Aug.</p>
+    </div>
+    <div class="date-box">
+      <p class="year">2013</p>
+      <p class="month">Sept.</p>
+    </div>
+    <div class="date-box">
       <p class="year">2014</p>
       <p class="month">March</p>
     </div>
   </div>
   
-  
-  
-
-  
-  <script type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="scripts/scripts.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+  <script src="scripts/jquery.mousewheel.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 </html>
