Makes thumbnails horizontally scroll

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Timeline Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -54,54 +55,57 @@
       </div>
     </div>
     <div class="dates">
-      <div class="date-box selected" id="boat">
-        <p class="year">2012</p>
-        <p class="month">April</p>
+      <div class="date-inner">
+        <div class="date-box selected" id="boat">
+          <p class="year">2012</p>
+          <p class="month">April</p>
+        </div>
+        <div class="date-box" id="stonehenge">
+          <p class="year">2013</p>
+          <p class="month">Aug.</p>
+        </div>
+        <div class="date-box" id="hut">
+          <p class="year">2013</p>
+          <p class="month">Sept.</p>
+        </div>
+        <div class="date-box" id="bike">
+          <p class="year">2014</p>
+          <p class="month">March</p>
+        </div>
+        <div class="date-box" id="bridge">
+          <p class="year">2014</p>
+          <p class="month">April</p>
+        </div>
+        <div class="date-box" id="woods">
+          <p class="year">2014</p>
+          <p class="month">May</p>
+        </div>
+        <div class="date-box">
+          <p class="year">2013</p>
+          <p class="month">Sept.</p>
+        </div>
+        <div class="date-box">
+          <p class="year">2014</p>
+          <p class="month">March</p>
+        </div>
+        <div class="date-box">
+          <p class="year">2012</p>
+          <p class="month">April</p>
+        </div>
+        <div class="date-box">
+          <p class="year">2013</p>
+          <p class="month">Aug.</p>
+        </div>
+        <div class="date-box">
+          <p class="year">2013</p>
+          <p class="month">Sept.</p>
+        </div>
       </div>
-      <div class="date-box" id="stonehenge">
-        <p class="year">2013</p>
-        <p class="month">Aug.</p>
-      </div>
-      <div class="date-box" id="hut">
-        <p class="year">2013</p>
-        <p class="month">Sept.</p>
-      </div>
-      <div class="date-box" id="bike">
-        <p class="year">2014</p>
-        <p class="month">March</p>
-      </div>
-      <div class="date-box" id="bridge">
-        <p class="year">2014</p>
-        <p class="month">April</p>
-      </div>
-      <div class="date-box" id="woods">
-        <p class="year">2014</p>
-        <p class="month">May</p>
-      </div>
-      <div class="date-box">
-        <p class="year">2013</p>
-        <p class="month">Sept.</p>
-      </div>
-      <div class="date-box">
-        <p class="year">2014</p>
-        <p class="month">March</p>
-      </div>
-      <div class="date-box">
-        <p class="year">2012</p>
-        <p class="month">April</p>
-      </div>
-      <div class="date-box">
-        <p class="year">2013</p>
-        <p class="month">Aug.</p>
-      </div>
-      <div class="date-box">
-        <p class="year">2013</p>
-        <p class="month">Sept.</p>
-      </div>
-    </div>
+    </div>  
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+  
   <script src="scripts/scripts.js"></script>
 </body>
 </html>
