Adds clickable arrows at bottom center of image

--- a/index.html
+++ b/index.html
@@ -9,99 +9,98 @@
   <div class="header-wrapper">
     <h2>This is the page header</h2>
   </div>
-  <div class="timeline-wrapper">
-    <div class="previous"></div>
-    <div class="next"></div>
-    <div class="timeline-outer">
-      <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
-        <div class="text-container">
-          <p id="boat-content">This is a really old boat.</p>
-        </div>
+  <div class="previous"></div>
+  <div class="next"></div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
+      <div class="text-container">
+        <p id="boat-content">This is a really old boat.</p>
       </div>
     </div>
-    <div class="timeline-outer">  
-      <div class="timeline-inner" id="stonehenge-img" style="background-image: url('images/stonehenge.jpg')">
-        <div class="text-container">
-          <p id="stonehenge-content">These are some ancient stones.</p>
-        </div>
+  </div>
+  <div class="timeline-outer">  
+    <div class="timeline-inner" id="stonehenge-img" style="background-image: url('images/stonehenge.jpg')">
+      <div class="text-container">
+        <p id="stonehenge-content">These are some ancient stones.</p>
       </div>
     </div>
-    <div class="timeline-outer">
-      <div class="timeline-inner" id="hut-img" style="background-image: url('images/hut.jpg')">
-        <div class="text-container">
-          <p id="hut-content">A very old stone house.</p>
-        </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="hut-img" style="background-image: url('images/hut.jpg')">
+      <div class="text-container">
+        <p id="hut-content">A very old stone house.</p>
       </div>
     </div>
-    <div class="timeline-outer">
-      <div class="timeline-inner" id="bike-img" style="background-image: url('images/bike.jpg')">
-        <div class="text-container">
-          <p id="bike-content">An old motorcycle.</p>
-        </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="bike-img" style="background-image: url('images/bike.jpg')">
+      <div class="text-container">
+        <p id="bike-content">An old motorcycle.</p>
       </div>
     </div>
-    <div class="timeline-outer">
-      <div class="timeline-inner" id="bridge-img" style="background-image: url('images/bridge.jpg')">
-        <div class="text-container">
-          <p id="bridge-content">A bridge in the country.</p>
-        </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="bridge-img" style="background-image: url('images/bridge.jpg')">
+      <div class="text-container">
+        <p id="bridge-content">A bridge in the country.</p>
       </div>
     </div>
-    <div class="timeline-outer">
-      <div class="timeline-inner" id="woods-img" style="background-image: url('images/woods.jpg')">
-        <div class="text-container">
-          <p id="woods-content">Here are a few trees?</p>
-        </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="woods-img" style="background-image: url('images/woods.jpg')">
+      <div class="text-container">
+        <p id="woods-content">Here are a few trees?</p>
       </div>
     </div>
-    <div class="dates">
-      <div class="date-inner">
-        <div class="date-box selected" id="boat">
-          <p class="year">2012</p>
-          <p class="month">April</p>
-        </div>
-        <div class="date-box" id="stonehenge">
-          <p class="year">2013</p>
-          <p class="month">Aug.</p>
-        </div>
-        <div class="date-box" id="hut">
-          <p class="year">2013</p>
-          <p class="month">Sept.</p>
-        </div>
-        <div class="date-box" id="bike">
-          <p class="year">2014</p>
-          <p class="month">March</p>
-        </div>
-        <div class="date-box" id="bridge">
-          <p class="year">2014</p>
-          <p class="month">April</p>
-        </div>
-        <div class="date-box" id="woods">
-          <p class="year">2014</p>
-          <p class="month">May</p>
-        </div>
-        <div class="date-box">
-          <p class="year">2013</p>
-          <p class="month">Sept.</p>
-        </div>
-        <div class="date-box">
-          <p class="year">2014</p>
-          <p class="month">March</p>
-        </div>
-        <div class="date-box">
-          <p class="year">2012</p>
-          <p class="month">April</p>
-        </div>
-        <div class="date-box">
-          <p class="year">2013</p>
-          <p class="month">Aug.</p>
-        </div>
-        <div class="date-box">
-          <p class="year">2013</p>
-          <p class="month">Sept.</p>
-        </div>
+  </div>
+  <h2 class="timeline-nav"><span class="timeline-left">&lsaquo;</span><span class="timeline-right">&rsaquo;</span></h2>
+  <div class="dates">
+    <div class="date-inner">
+      <div class="date-box selected" id="boat">
+        <p class="year">2012</p>
+        <p class="month">April</p>
       </div>
-    </div>  
+      <div class="date-box" id="stonehenge">
+        <p class="year">2013</p>
+        <p class="month">Aug.</p>
+      </div>
+      <div class="date-box" id="hut">
+        <p class="year">2013</p>
+        <p class="month">Sept.</p>
+      </div>
+      <div class="date-box" id="bike">
+        <p class="year">2014</p>
+        <p class="month">March</p>
+      </div>
+      <div class="date-box" id="bridge">
+        <p class="year">2014</p>
+        <p class="month">April</p>
+      </div>
+      <div class="date-box" id="woods">
+        <p class="year">2014</p>
+        <p class="month">May</p>
+      </div>
+      <div class="date-box">
+        <p class="year">2013</p>
+        <p class="month">Sept.</p>
+      </div>
+      <div class="date-box">
+        <p class="year">2014</p>
+        <p class="month">March</p>
+      </div>
+      <div class="date-box">
+        <p class="year">2012</p>
+        <p class="month">April</p>
+      </div>
+      <div class="date-box">
+        <p class="year">2013</p>
+        <p class="month">Aug.</p>
+      </div>
+      <div class="date-box">
+        <p class="year">2013</p>
+        <p class="month">Sept.</p>
+      </div>
+    </div>    
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
