Refactors element position calculations into a function and makes previous and next arrow positions more dynamic

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <div class="header-wrapper">
     <h2>This is the page header</h2>
   </div>
-  <div class="previous"></div>
-  <div class="next"></div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
       <div class="text-container">
@@ -53,7 +51,7 @@
       </div>
     </div>
   </div>
-  <h2 class="timeline-nav"><span class="timeline-left">&lsaquo;</span><span class="timeline-right">&rsaquo;</span></h2>
+  <h2 class="timeline-nav"><span class="previous">&lsaquo;</span><span class="next">&rsaquo;</span></h2>
   <div class="dates">
     <div class="date-inner">
       <div class="date-box selected" id="boat">
