--- a/index.html
+++ b/index.html
@@ -12,42 +12,91 @@
   <div class="timeline-outer">
     <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
       <div class="text-container">
-        <p id="boat-content">This is a really old boat.</p>
+        <p id="boat-content">IT WAS the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness,</p>
       </div>
     </div>
   </div>
   <div class="timeline-outer">  
     <div class="timeline-inner" id="stonehenge-img" style="background-image: url('images/stonehenge.jpg')">
       <div class="text-container">
-        <p id="stonehenge-content">These are some ancient stones.</p>
+        <p id="stonehenge-content">it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us, we were all going direct to Heaven, we were all going direct the other way-</p>
       </div>
     </div>
   </div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="hut-img" style="background-image: url('images/hut.jpg')">
       <div class="text-container">
-        <p id="hut-content">A very old stone house.</p>
+        <p id="hut-content"> in short, the period was so far like the present period, that some of its noisiest authorities insisted on its being received, for good or for evil, in the superlative degree of comparison only.</p>
       </div>
     </div>
   </div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="bike-img" style="background-image: url('images/bike.jpg')">
       <div class="text-container">
-        <p id="bike-content">An old motorcycle.</p>
+        <p id="bike-content">There were a king with a large jaw and a queen with a plain face, on the throne of England; there were a king with a large jaw and a queen with a fair face, on the throne of France.</p>
       </div>
     </div>
   </div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="bridge-img" style="background-image: url('images/bridge.jpg')">
       <div class="text-container">
-        <p id="bridge-content">A bridge in the country.</p>
+        <p id="bridge-content">In both countries it was clearer than crystal to the lords of the State preserves of loaves and fishes, that things in general were settled for ever.</p>
       </div>
     </div>
   </div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="woods-img" style="background-image: url('images/woods.jpg')">
       <div class="text-container">
-        <p id="woods-content">Here are a few trees?</p>
+        <p id="woods-content">It was the year of Our Lord one thousand seven hundred and seventy-five. Spiritual revelations were conceded to England at that favoured period, as at this. Mrs. Southcott had recently attained her five-and-twentieth blessed birthday,</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="fence-img" style="background-image: url('images/fence.jpg')">
+      <div class="text-container">
+        <p id="fence-content">of whom a prophetic private in the Life Guards had heralded the sublime appearance by announcing that arrangements were made for the swallowing up of London and Westminster.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="frame-img" style="background-image: url('images/frame.jpg')">
+      <div class="text-container">
+        <p id="frame-content"> Even the Cock-lane ghost had been laid only a round dozen of years, after rapping out its messages, as the spirits of this very year last past (supernaturally deficient in originality) rapped out theirs.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="house-img" style="background-image: url('images/house.jpg')">
+      <div class="text-container">
+        <p id="house-content">Mere messages in the earthly order of events had lately come to the English Crown and People, from a congress of British subjects in America: which, strange to relate, have proved more important to the human race</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="lightening-img" style="background-image: url('images/lightening.jpg')">
+      <div class="text-container">
+        <p id="lightening-content">than any communications yet received through any of the chickens of the Cock-lane brood. France, less favoured on the whole as to matters spiritual than her sister of the shield and trident, rolled with exceeding smoothness down hill,</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="port-img" style="background-image: url('images/port.jpg')">
+      <div class="text-container">
+        <p id="port-content">making paper money and spending it. Under the guidance of her Christian pastors, she entertained herself, besides, with such humane achievements as sentencing a youth to have his hands cut off, his tongue torn out with pincers,</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="prairie-img" style="background-image: url('images/prairie.jpg')">
+      <div class="text-container">
+        <p id="prairie-content">and his body burned alive, because he had not kneeled down in the rain to do honour to a dirty procession of monks which passed within his view, at a distance of some fifty or sixty yards.</p>
+      </div>
+    </div>
+  </div>
+  <div class="timeline-outer">
+    <div class="timeline-inner" id="stones-img" style="background-image: url('images/stones.jpg')">
+      <div class="text-container">
+        <p id="stones-content"> It is likely enough that, rooted in the woods of France and Norway, there were growing trees, when that sufferer was put to death, already marked by the Woodman, Fate, to come down and be sawn into boards,</p>
       </div>
     </div>
   </div>
@@ -55,47 +104,55 @@
   <div class="dates">
     <div class="date-inner">
       <div class="date-box selected" id="boat">
-        <p class="year">2012</p>
+        <p class="year">2002</p>
         <p class="month">April</p>
       </div>
       <div class="date-box" id="stonehenge">
-        <p class="year">2013</p>
+        <p class="year">2003</p>
         <p class="month">Aug.</p>
       </div>
       <div class="date-box" id="hut">
-        <p class="year">2013</p>
+        <p class="year">2004</p>
         <p class="month">Sept.</p>
       </div>
       <div class="date-box" id="bike">
-        <p class="year">2014</p>
+        <p class="year">2005</p>
         <p class="month">March</p>
       </div>
       <div class="date-box" id="bridge">
-        <p class="year">2014</p>
+        <p class="year">2006</p>
         <p class="month">April</p>
       </div>
       <div class="date-box" id="woods">
-        <p class="year">2014</p>
+        <p class="year">2007</p>
         <p class="month">May</p>
       </div>
-      <div class="date-box">
-        <p class="year">2013</p>
+      <div class="date-box" id="fence">
+        <p class="year">2008</p>
         <p class="month">Sept.</p>
       </div>
-      <div class="date-box">
-        <p class="year">2014</p>
+      <div class="date-box" id="frame">
+        <p class="year">2009</p>
         <p class="month">March</p>
       </div>
-      <div class="date-box">
-        <p class="year">2012</p>
+      <div class="date-box" id="house">
+        <p class="year">2010</p>
         <p class="month">April</p>
       </div>
-      <div class="date-box">
+      <div class="date-box" id="lightening">
+        <p class="year">2011</p>
+        <p class="month">Aug.</p>
+      </div>
+      <div class="date-box" id="port">
+        <p class="year">2012</p>
+        <p class="month">Sept.</p>
+      </div>
+      <div class="date-box" id="prairie">
         <p class="year">2013</p>
         <p class="month">Aug.</p>
       </div>
-      <div class="date-box">
-        <p class="year">2013</p>
+      <div class="date-box" id="stones">
+        <p class="year">2014</p>
         <p class="month">Sept.</p>
       </div>
     </div>    
