Improves text box positioning for mobile and small styling tweaks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <div class="header-wrapper">
-    <h2>This is the page header</h2>
+    <h2>Timeline Slider Demo</h2>
+    <p>text from <em>A Tale of Two Cities</em></p>
   </div>
   <div class="timeline-outer">
     <div class="timeline-inner" id="boat-img" style="background-image: url('images/boat.jpg')">
