--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
       </div>
     </div>    
   </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-  
+  <script src="scripts/jquery-1.11.1.js"></script>
+  <script src="scripts/jquery-ui-1.10.4.custom.js"></script>
+  <script src="scripts/jquery.mobile.custom.js"></script>  
   <script src="scripts/scripts.js"></script>
 </body>
 </html>
